--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: "3.3"
+version: "3"
 services:
-  app:
-    build:
-       context: .
-    ports:
-       - "80:80"
+      angular:
+           build: .
+           ports:
+              - "80:80"
+       
